WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211773
REGRESSION(
r261538
): [GTK] API tests are failing
https://bugs.webkit.org/show_bug.cgi?id=211773
Summary
REGRESSION(r261538): [GTK] API tests are failing
Diego Pino
Reported
2020-05-11 23:55:38 PDT
API tests started failing in the interval [
r261537
-
r261541
] (See:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20(Tests)?numbuilds=50
). The EWS API-GTK bot reported the tests were failing on
r261538
(
https://bugs.webkit.org/show_bug.cgi?id=211729
) (
https://ews-build.webkit.org/#/builders/34/builds/9068
). So it was either
r261537
or
r261538
. I run the API tests on
r261537
and the tests run fine (only 1 unexpected timeout and 1 unexpected pass), so the regression was introduced in
r261538
.
Attachments
proposed patch.
(4.86 KB, patch)
2020-05-12 00:56 PDT
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-05-12 00:56:01 PDT
Created
attachment 399108
[details]
proposed patch.
Mark Lam
Comment 2
2020-05-12 00:59:43 PDT
Comment on
attachment 399108
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=399108&action=review
> Source/WebKit/ChangeLog:8 > + Previously, we were calling Wasm::enableFastMemory(). By then, it is too late
Missing some text here. I meant to say we were calling Wasm::enableFastMemory() in WebProcess::initializeWebProcess().
Yusuke Suzuki
Comment 3
2020-05-12 01:00:55 PDT
Comment on
attachment 399108
[details]
proposed patch. r=me
Mark Lam
Comment 4
2020-05-12 01:48:49 PDT
Diego has tested the patch manually and confirmed that it resolved the API test failures on GTK. I will land it shortly.
Mark Lam
Comment 5
2020-05-12 01:49:50 PDT
Landed in
r261549
: <
http://trac.webkit.org/r261549
>.
Radar WebKit Bug Importer
Comment 6
2020-05-12 01:50:19 PDT
<
rdar://problem/63127074
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug